--- a/gdwGameYear3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/gdwGameYear3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1357,6 +1357,65 @@ StaticMeshComponent.Navigation=True
 StaticMeshComponent.VirtualTexture=True
 StaticMeshComponent.Tags=True
 StaticMeshComponent.Cooking=True
+SkyAtmosphere.TransformCommon=True
+SkyAtmosphere.Planet=True
+SkyAtmosphere.Atmosphere=True
+SkyAtmosphere.Atmosphere - Rayleigh=True
+SkyAtmosphere.Atmosphere - Mie=True
+SkyAtmosphere.Atmosphere - Absorption=True
+SkyAtmosphere.Art Direction=True
+SkyAtmosphere.Rendering=True
+SkyAtmosphere.Physics=True
+SkyAtmosphere.Tags=True
+SkyAtmosphere.Activation=True
+SkyAtmosphere.Cooking=True
+SkyAtmosphere.Replication=True
+SkyAtmosphere.Networking=True
+SkyAtmosphere.Actor=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.AtmosphereAndCloud=True
+SkyLight.Visualization=True
+SkyLight.RayTracing=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Physics=True
+SkyLight.Networking=True
+SkyLight.Actor=True
+VolumetricCloud.TransformCommon=True
+VolumetricCloud.Layer=True
+VolumetricCloud.Planet=True
+VolumetricCloud.Cloud Material=True
+VolumetricCloud.Cloud Tracing=True
+VolumetricCloud.Rendering=True
+VolumetricCloud.Physics=True
+VolumetricCloud.Tags=True
+VolumetricCloud.Activation=True
+VolumetricCloud.Cooking=True
+VolumetricCloud.Replication=True
+VolumetricCloud.Networking=True
+VolumetricCloud.Actor=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Physics=True
+Actor.Networking=True
+Actor.Actor=True
+ExponentialHeightFog.TransformCommon=True
+ExponentialHeightFog.ExponentialHeightFogComponent=True
+ExponentialHeightFog.InscatteringTexture=True
+ExponentialHeightFog.DirectionalInscattering=True
+ExponentialHeightFog.VolumetricFog=True
+ExponentialHeightFog.Rendering=True
+ExponentialHeightFog.Physics=True
+ExponentialHeightFog.Tags=True
+ExponentialHeightFog.Activation=True
+ExponentialHeightFog.Cooking=True
+ExponentialHeightFog.Replication=True
+ExponentialHeightFog.Networking=True
+ExponentialHeightFog.Actor=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1483,4 +1542,10 @@ RecentlyPlaced=/Game/3D_Models/CharacterModelReference.CharacterModelReference;
 
 [SelectionDetails]
 PreserveScaleRatio=False
+
+[AssetEditorSubsystemRecents]
+MRUItem0=/Game/Maps/Level1
+
+[DetailCategoriesAdvanced]
+Actor.Actor=True
 
