some level redesign and ai updates

--- a/gdwGameYear3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/gdwGameYear3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -168,10 +168,10 @@ LastLevel=/Game/Maps/Level1
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -196,8 +196,6 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/Materials/Mirror.Mirror
-OpenAssetsAtExit=/Game/Maps/Level1.Level1:PersistentLevel.Level1
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1359,7 +1357,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/BluePrints
+ContentBrowserDrawer.SelectedPaths=/Game/Maps
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2164,7 +2162,7 @@ TextureImportSettings.ImportSettings=True
 UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
 UMGEditorProjectSettings.Designer=True
-UMGEditorProjectSettings.Designer =True
+UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
 AndroidRuntimeSettings.App Bundles=True
 AndroidRuntimeSettings.Build=True
@@ -2339,6 +2337,7 @@ PlanarReflection.HLOD=True
 PlanarReflection.Networking=True
 PlanarReflection.Input=True
 Level1_C.Default=True
+AI_Enemy_C.Materials=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2484,13 +2483,13 @@ RecentlyPlaced=/Game/3D_Assets/Cutting_Board/Cutting_Board_Cube.Cutting_Board_Cu
 PreserveScaleRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Materials/Mirror
-MRUItem1=/Game/Maps/Level1
-MRUItem2=/Game/BluePrints/AI_Enemy
-MRUItem3=/Game/BluePrints/EnemySample
-MRUItem4=/Game/BluePrints/Mirror
-MRUItem5=/Game/BluePrints/MirrorManager
-MRUItem6=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/BluePrints/AI_Enemy
+MRUItem2=/Game/Maps/Level1
+MRUItem3=/Game/Materials/Mirror
+MRUItem4=/Game/BluePrints/EnemySample
+MRUItem5=/Game/BluePrints/Mirror
+MRUItem6=/Game/BluePrints/MirrorManager
 MRUItem7=/Game/BluePrints/BP_Hammer
 MRUItem8=/Game/3D_Assets/Fence/green
 MRUItem9=/Game/3D_Assets/Fence/Screenshot_2023-11-03_125416_Mat
