--- a/gdwGameYear3/Config/DefaultGame.ini
+++ b/gdwGameYear3/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=A3874BB044BDAFF39EDBB49A3AD2E44D
 ProjectName=First Person BP Game Template
+CompanyName=GTG Studios
 
 [/Script/MoviePlayer.MoviePlayerSettings]
 bWaitForMoviesToComplete=False
