added demon animationd

--- a/gdwGameYear3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/gdwGameYear3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -132,6 +132,7 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=320,Y=156)
+LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -165,11 +166,12 @@ SnapScaleEnabled=False
 GridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/Maps/Level1
+LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -199,7 +201,6 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
-OpenAssetsAtExit=/Game/Materials/LightFlicker.LightFlicker
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -217,7 +218,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 [RootWindow]
 ScreenPosition=X=312.000 Y=172.000
 WindowSize=X=1297.000 Y=737.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -237,7 +238,7 @@ UNR=../../../../../../Users/reidp/OneDrive/Documents/GitHub/Unreal Engine/gdwGam
 BRUSH=../../../../../../Users/reidp/OneDrive/Documents/Unreal Projects/gdwGameYear3/Content/
 FBX=../../../../../../Users/reidp/OneDrive/Documents/Unreal Projects/gdwGameYear3/Content/
 FBXAnim=../../../../../../Users/reidp/OneDrive/Documents/Unreal Projects/gdwGameYear3/Content/
-GenericImport=../../../../../Users/User/Blender exports/Book.fbx
+GenericImport=../../../../../Users/User/Blender exports/demon with heart + bones2.fbx
 GenericExport=../../../../../../Users/reidp/OneDrive/Documents/Unreal Projects/gdwGameYear3/Content/
 GenericOpen=../../../../../../Users/reidp/OneDrive/Documents/Unreal Projects/gdwGameYear3/Content/
 GenericSave=../../../../../../Users/reidp/OneDrive/Documents/Unreal Projects/gdwGameYear3/Content/
@@ -1324,11 +1325,11 @@ MovieSceneCaptureDialog.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Unreal engine/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=Z:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/EpicGames/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Fortnite/Engine/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Unreal engine/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
 MRUItem0=/Game/Maps/Level1
@@ -1369,7 +1370,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Sound
+ContentBrowserDrawer.SelectedPaths=/Game/3D_Assets/Demon
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -3097,7 +3098,7 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
-bImportAnimations=False
+bImportAnimations=True
 bImportMaterials=True
 bImportTextures=True
 
@@ -3199,9 +3200,12 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [PlacementMode]
+RecentlyPlaced=/Game/3D_Assets/Demon/demon_with_heart_+_bones2_Anim_Root_attack.demon_with_heart_+_bones2_Anim_Root_attack;
+RecentlyPlaced=/Game/3D_Assets/Demon/demon_with_heart_+_bones2_Anim_Root_walk_animation.demon_with_heart_+_bones2_Anim_Root_walk_animation;
+RecentlyPlaced=/Game/3D_Assets/Demon/demon_with_heart_+_bones2_Anim_Root_chase_start_animation.demon_with_heart_+_bones2_Anim_Root_chase_start_animation;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/BluePrints/LightSwitchPhys.LightSwitchPhys;
 RecentlyPlaced=/Game/BluePrints/LightSwitch.LightSwitch;
@@ -3219,43 +3223,41 @@ RecentlyPlaced=/Game/3D_Assets/Toilet/Toilet_Torus.Toilet_Torus;
 RecentlyPlaced=/Game/3D_Assets/Toilet/Toilet_Sphere.Toilet_Sphere;
 RecentlyPlaced=/Game/3D_Assets/Toilet/Toilet_Cylinder_001.Toilet_Cylinder_001;
 RecentlyPlaced=/Game/3D_Assets/Toilet/Toilet_Cylinder.Toilet_Cylinder;
-RecentlyPlaced=/Game/3D_Assets/CardboardBox/cardbord_box.cardbord_box;
-RecentlyPlaced=/Game/3D_Assets/Door/Door.Door;
-RecentlyPlaced=/Game/3D_Models/Investigator/Investigator_Sphere_001.Investigator_Sphere_001;
 
 [SelectionDetails]
 PreserveScaleRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Materials/LightFlicker
-MRUItem1=/Game/BluePrints/LightSwitch
-MRUItem2=/Game/FirstPerson/Blueprints/BP_Key
-MRUItem3=/Game/BluePrints/BP_Door
-MRUItem4=/Game/BluePrints/LightSwitchPhys
-MRUItem5=/Game/3D_Assets/Lamp/Cover
-MRUItem6=/Game/BluePrints/BP_EnemyAI
-MRUItem7=/Game/BluePrints/AI_Enemy
-MRUItem8=/Game/BluePrints/MirrorSpawnSystem/target
-MRUItem9=/Game/BluePrints/MirrorSpawnSystem/MirrorManager
-MRUItem10=/Game/BluePrints/MirrorSpawnSystem/Mirror
-MRUItem11=/Game/BluePrints/MirrorSpawnSystem/ControlLight_BP
-MRUItem12=/Game/UI_Assets/KeyPickup
-MRUItem13=/Game/Maps/Level1
-MRUItem14=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem15=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem16=/Game/FirstPerson/Input/IMC_Default
-MRUItem17=/Game/FirstPerson/Input/BPI_Interaction
-MRUItem18=/Game/FirstPerson/Closet/Closet
-MRUItem19=/Game/Sound/FreezerBuzz
-MRUItem20=/Game/Sound/Box
-MRUItem21=/Game/Sound/Whispers
-MRUItem22=/Game/Sound/LampBuxxin
-MRUItem23=/Game/Sound/LampBuzz
-MRUItem24=/Game/Sound/LampLightBuzz
-MRUItem25=/Game/BluePrints/BP_Spawner
-MRUItem26=/Game/3D_Assets/Door/Material_001
-MRUItem27=/Game/3D_Assets/Clock/ClockFaceGlass
-MRUItem28=/Game/3D_Assets/Clock/Face
+MRUItem0=/Game/3D_Assets/Demon/Material_002
+MRUItem1=/Game/Materials/LightFlicker
+MRUItem2=/Game/BluePrints/LightSwitch
+MRUItem3=/Game/FirstPerson/Blueprints/BP_Key
+MRUItem4=/Game/BluePrints/BP_Door
+MRUItem5=/Game/BluePrints/LightSwitchPhys
+MRUItem6=/Game/3D_Assets/Lamp/Cover
+MRUItem7=/Game/BluePrints/BP_EnemyAI
+MRUItem8=/Game/BluePrints/AI_Enemy
+MRUItem9=/Game/BluePrints/MirrorSpawnSystem/target
+MRUItem10=/Game/BluePrints/MirrorSpawnSystem/MirrorManager
+MRUItem11=/Game/BluePrints/MirrorSpawnSystem/Mirror
+MRUItem12=/Game/BluePrints/MirrorSpawnSystem/ControlLight_BP
+MRUItem13=/Game/UI_Assets/KeyPickup
+MRUItem14=/Game/Maps/Level1
+MRUItem15=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem16=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem17=/Game/FirstPerson/Input/IMC_Default
+MRUItem18=/Game/FirstPerson/Input/BPI_Interaction
+MRUItem19=/Game/FirstPerson/Closet/Closet
+MRUItem20=/Game/Sound/FreezerBuzz
+MRUItem21=/Game/Sound/Box
+MRUItem22=/Game/Sound/Whispers
+MRUItem23=/Game/Sound/LampBuxxin
+MRUItem24=/Game/Sound/LampBuzz
+MRUItem25=/Game/Sound/LampLightBuzz
+MRUItem26=/Game/BluePrints/BP_Spawner
+MRUItem27=/Game/3D_Assets/Door/Material_001
+MRUItem28=/Game/3D_Assets/Clock/ClockFaceGlass
+MRUItem29=/Game/3D_Assets/Clock/Face
 
 [DetailCategoriesAdvanced]
 Actor.Actor=True
@@ -3264,7 +3266,7 @@ PreviewMaterial.Translucency=True
 PreviewMaterial.Usage=False
 PreviewMaterial.Mobile=False
 FbxImportUI.Material=True
-FbxImportUI.Mesh=True
+FbxImportUI.Mesh=False
 StaticMeshActor.StaticMesh=True
 StaticMeshActor.Materials=True
 PropertyWrapper.Variable=True
@@ -3276,7 +3278,6 @@ K2Node_VariableGet.Variable=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 bRealtimeMaterialViewport=False
 
 [Interchange_StackName__Assets__PipelineClassName_InterchangeGenericMaterialPipeline]
@@ -3805,6 +3806,7 @@ ChangeVariableType_Warning=False
 /Game/BluePrints/LightSwitchPhys.LightSwitchPhys=0
 /Game/FirstPerson/Blueprints/BP_Key.BP_Key=0
 /Game/Materials/LightFlicker.LightFlicker=1
+/Game/3D_Assets/Demon/Material_002.Material_002=1
 
 [MaterialEditor]
 PrimType=1
