--- a/gdwGameYear3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/gdwGameYear3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -170,12 +170,13 @@ LastLevel=/Game/Maps/Level1
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=Behavior Tree
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=Behavior Tree
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
@@ -199,14 +200,10 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-OpenAssetsAtExit=/Game/BluePrints/AI_Enemy.AI_Enemy
-OpenAssetsAtExit=/Game/AI/BT_GhostAI.BT_GhostAI
-OpenAssetsAtExit=/Game/AI/Tasks/BTTask_RoamAround.BTTask_RoamAround
+OpenAssetsAtExit=/Game/AI/BBD_GhostAI.BBD_GhostAI
 OpenAssetsAtExit=/Game/AI/AI_Controller.AI_Controller
-OpenAssetsAtExit=/Game/BluePrints/MirrorSpawnSystem/Mirror.Mirror
-OpenAssetsAtExit=/Game/AI/Tasks/BTTask_ChasePlayer.BTTask_ChasePlayer
 OpenAssetsAtExit=/Game/AI/BP_TestGhost.BP_TestGhost
+OpenAssetsAtExit=/Game/AI/BT_GhostAI.BT_GhostAI
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2413,7 +2410,7 @@ K2Node_CustomEvent.Graph=True
 K2Node_CustomEvent.Inputs=True
 PawnSensingComponent.Variable=True
 PawnSensingComponent.Sockets=True
-PawnSensingComponent.AI=True
+PawnSensingComponent.AI=False
 PawnSensingComponent.Tags=True
 PawnSensingComponent.ComponentTick=True
 PawnSensingComponent.ComponentReplication=True
@@ -3220,6 +3217,8 @@ BP_TestGhost_C.Networking=True
 BP_TestGhost_C.SkeletalMesh=True
 BP_TestGhost_C.Optimization=True
 BP_TestGhost_C.DataLayers=True
+PawnSensingComponent.Navigation=False
+PawnSensingComponent.AssetUserData=False
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -3365,36 +3364,36 @@ RecentlyPlaced=/Game/3D_Assets/StorageRack/Cylinder_003.Cylinder_003;
 PreserveScaleRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/AI/BP_TestGhost
-MRUItem1=/Game/AI/Tasks/BTTask_ChasePlayer
-MRUItem2=/Game/BluePrints/MirrorSpawnSystem/Mirror
-MRUItem3=/Game/AI/AI_Controller
-MRUItem4=/Game/AI/Tasks/BTTask_RoamAround
-MRUItem5=/Game/AI/BT_GhostAI
-MRUItem6=/Game/BluePrints/AI_Enemy
-MRUItem7=/Game/Materials/LightFlicker
-MRUItem8=/Game/BluePrints/BP_EnemyAI
-MRUItem9=/Game/FirstPerson/Closet/Closet
-MRUItem10=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem11=/Game/FirstPerson/Closet/IA_Interact
-MRUItem12=/Game/BluePrints/BP_Door
-MRUItem13=/Game/BluePrints/CallCloset
-MRUItem14=/Game/BluePrints/BPI_InCloset
-MRUItem15=/Game/FirstPerson/Input/BPI_Door
-MRUItem16=/Game/FirstPerson/Blueprints/BP_Key
-MRUItem17=/Game/BluePrints/LightSwitch
-MRUItem18=/Game/BluePrints/LightSwitchPhys
-MRUItem19=/Game/FirstPerson/Input/BPI_Interaction
-MRUItem20=/Game/3D_Assets/Demon/Material_002
-MRUItem21=/Game/3D_Assets/Lamp/Cover
-MRUItem22=/Game/BluePrints/MirrorSpawnSystem/target
-MRUItem23=/Game/BluePrints/MirrorSpawnSystem/MirrorManager
-MRUItem24=/Game/BluePrints/MirrorSpawnSystem/ControlLight_BP
-MRUItem25=/Game/UI_Assets/KeyPickup
-MRUItem26=/Game/Maps/Level1
-MRUItem27=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem28=/Game/FirstPerson/Input/IMC_Default
-MRUItem29=/Game/Sound/FreezerBuzz
+MRUItem0=/Game/AI/BT_GhostAI
+MRUItem1=/Game/AI/BP_TestGhost
+MRUItem2=/Game/AI/AI_Controller
+MRUItem3=/Game/AI/BBD_GhostAI
+MRUItem4=/Game/AI/Tasks/BTTask_ChasePlayer
+MRUItem5=/Game/BluePrints/MirrorSpawnSystem/Mirror
+MRUItem6=/Game/AI/Tasks/BTTask_RoamAround
+MRUItem7=/Game/BluePrints/AI_Enemy
+MRUItem8=/Game/Materials/LightFlicker
+MRUItem9=/Game/BluePrints/BP_EnemyAI
+MRUItem10=/Game/FirstPerson/Closet/Closet
+MRUItem11=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem12=/Game/FirstPerson/Closet/IA_Interact
+MRUItem13=/Game/BluePrints/BP_Door
+MRUItem14=/Game/BluePrints/CallCloset
+MRUItem15=/Game/BluePrints/BPI_InCloset
+MRUItem16=/Game/FirstPerson/Input/BPI_Door
+MRUItem17=/Game/FirstPerson/Blueprints/BP_Key
+MRUItem18=/Game/BluePrints/LightSwitch
+MRUItem19=/Game/BluePrints/LightSwitchPhys
+MRUItem20=/Game/FirstPerson/Input/BPI_Interaction
+MRUItem21=/Game/3D_Assets/Demon/Material_002
+MRUItem22=/Game/3D_Assets/Lamp/Cover
+MRUItem23=/Game/BluePrints/MirrorSpawnSystem/target
+MRUItem24=/Game/BluePrints/MirrorSpawnSystem/MirrorManager
+MRUItem25=/Game/BluePrints/MirrorSpawnSystem/ControlLight_BP
+MRUItem26=/Game/UI_Assets/KeyPickup
+MRUItem27=/Game/Maps/Level1
+MRUItem28=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem29=/Game/FirstPerson/Input/IMC_Default
 
 [DetailCategoriesAdvanced]
 Actor.Actor=True
@@ -3984,6 +3983,7 @@ ChangeVariableType_Warning=False
 /Game/AI/AI_Controller.AI_Controller=0
 /Game/AI/Tasks/BTTask_ChasePlayer.BTTask_ChasePlayer=0
 /Game/AI/BP_TestGhost.BP_TestGhost=0
+/Game/AI/BBD_GhostAI.BBD_GhostAI=0
 
 [MaterialEditor]
 PrimType=1
@@ -4315,7 +4315,7 @@ target_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.Mate
 PlanarReflection=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Mirror_C.TransformCommon.Transform,target_C.TransformCommon.Transform
 BP_EnemyAI_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Mirror_C.TransformCommon.Transform,target_C.TransformCommon.Transform,Blueprint.Interfaces.Implemented Interfaces,K2Node_VariableGet.DefaultValueCategory.Mesh
 K2Node=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Mirror_C.TransformCommon.Transform,target_C.TransformCommon.Transform
-PawnSensingComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Mirror_C.TransformCommon.Transform,target_C.TransformCommon.Transform,Blueprint.Interfaces.Implemented Interfaces,K2Node_VariableGet.DefaultValueCategory.Mesh,AI_Enemy_C.Physics.ConstraintsGroup
+PawnSensingComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,Mirror_C.TransformCommon.Transform,target_C.TransformCommon.Transform,Blueprint.Interfaces.Implemented Interfaces,BP_TestGhost_C.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.Mesh,AI_Enemy_C.Physics.ConstraintsGroup
 SkeletalMeshComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,Mirror_C.TransformCommon.Transform,target_C.TransformCommon.Transform,Blueprint.Interfaces.Implemented Interfaces,BP_TestGhost_C.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.Mesh,AI_Enemy_C.Physics.ConstraintsGroup
 CapsuleComponent=
 BP_Spawner_C=StaticMeshActor.Physics.ConstraintsGroup
