--- a/gdwGameYear3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/gdwGameYear3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -170,8 +170,9 @@ GridEnabled=False
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=MediaPlayerEditor
@@ -180,7 +181,6 @@ RecentAssetEditors=TextureEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
@@ -195,7 +195,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -238,7 +237,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/reidp/OneDrive/Documents/GitHub/Unreal Engine/gdwGameYear3/gdwGameYear3/Content/Maps
+UNR=../../../../../../Users/reidp/OneDrive/Documents/GitHub/Unreal Engine/gdwGameYear3/gdwGameYear3/Content/FirstPerson/Maps
 BRUSH=../../../../../../Users/reidp/OneDrive/Documents/Unreal Projects/gdwGameYear3/Content/
 FBX=../../../../../../Users/reidp/OneDrive/Documents/Unreal Projects/gdwGameYear3/Content/
 FBXAnim=../../../../../../Users/reidp/OneDrive/Documents/Unreal Projects/gdwGameYear3/Content/
@@ -3444,27 +3443,26 @@ MRUItem5=/Game/UI_Menu/MenuMoving_Video
 MRUItem6=/Game/UI_Menu/NewWidgetBlueprint
 MRUItem7=/Game/UI_Assets/MenuVideo
 MRUItem8=/Game/UI_Assets/Background/MainMenu
-MRUItem9=/Game/UI_Assets/MenuMoving
-MRUItem10=/Game/UI_Assets/Menu
-MRUItem11=/Game/UI_Assets/MenuVideo_Inst
-MRUItem12=/Game/AI/BT_GhostAI
-MRUItem13=/Game/AI/BP_TestGhost
-MRUItem14=/Game/AI/AI_Controller
-MRUItem15=/Game/AI/BBD_GhostAI
-MRUItem16=/Game/AI/Tasks/BTTask_ChasePlayer
-MRUItem17=/Game/BluePrints/MirrorSpawnSystem/Mirror
-MRUItem18=/Game/AI/Tasks/BTTask_RoamAround
-MRUItem19=/Game/BluePrints/AI_Enemy
-MRUItem20=/Game/Materials/LightFlicker
-MRUItem21=/Game/BluePrints/BP_EnemyAI
-MRUItem22=/Game/FirstPerson/Closet/Closet
-MRUItem23=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem24=/Game/FirstPerson/Closet/IA_Interact
-MRUItem25=/Game/BluePrints/BP_Door
-MRUItem26=/Game/BluePrints/CallCloset
-MRUItem27=/Game/BluePrints/BPI_InCloset
-MRUItem28=/Game/FirstPerson/Input/BPI_Door
-MRUItem29=/Game/FirstPerson/Blueprints/BP_Key
+MRUItem9=/Game/UI_Assets/Menu
+MRUItem10=/Game/UI_Assets/MenuVideo_Inst
+MRUItem11=/Game/AI/BT_GhostAI
+MRUItem12=/Game/AI/BP_TestGhost
+MRUItem13=/Game/AI/AI_Controller
+MRUItem14=/Game/AI/BBD_GhostAI
+MRUItem15=/Game/AI/Tasks/BTTask_ChasePlayer
+MRUItem16=/Game/BluePrints/MirrorSpawnSystem/Mirror
+MRUItem17=/Game/AI/Tasks/BTTask_RoamAround
+MRUItem18=/Game/BluePrints/AI_Enemy
+MRUItem19=/Game/Materials/LightFlicker
+MRUItem20=/Game/BluePrints/BP_EnemyAI
+MRUItem21=/Game/FirstPerson/Closet/Closet
+MRUItem22=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem23=/Game/FirstPerson/Closet/IA_Interact
+MRUItem24=/Game/BluePrints/BP_Door
+MRUItem25=/Game/BluePrints/CallCloset
+MRUItem26=/Game/BluePrints/BPI_InCloset
+MRUItem27=/Game/FirstPerson/Input/BPI_Door
+MRUItem28=/Game/FirstPerson/Blueprints/BP_Key
 
 [DetailCategoriesAdvanced]
 Actor.Actor=True
@@ -4081,6 +4079,7 @@ ChangeVariableType_Warning=False
 /Game/UI_Assets/MenuVideo.MenuVideo=0
 /Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap:PersistentLevel.FirstPersonMap=0
 /Game/UI_Menu/MenuMusic.MenuMusic=0
+/Game/UI_Menu/WB_OptionsMenu.WB_OptionsMenu=0
 
 [MaterialEditor]
 PrimType=1
@@ -4468,7 +4467,7 @@ CharacterMovementComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshAc
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.General.AssetUserData
 MaterialInstanceConstant=MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.General.AssetUserData
 FirstPersonMap_C=
-WB_MainMenu_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Mirror_C.TransformCommon.Transform,target_C.TransformCommon.Transform,Blueprint.Interfaces.Implemented Interfaces,K2Node_VariableGet.DefaultValueCategory.Mesh,AI_Enemy_C.Physics.ConstraintsGroup
+WB_MainMenu_C=
 WB_OptionsMenu_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Mirror_C.TransformCommon.Transform,target_C.TransformCommon.Transform,Blueprint.Interfaces.Implemented Interfaces,K2Node_VariableGet.DefaultValueCategory.Mesh,AI_Enemy_C.Physics.ConstraintsGroup
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
