--- a/gdwGameYear3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/gdwGameYear3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -172,6 +172,12 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=TextureEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -193,12 +199,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1330,10 +1330,10 @@ PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=D:/EpicGames/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Unreal engine/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=Z:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=D:/EpicGames/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Fortnite/Engine/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
@@ -1341,7 +1341,7 @@ MRUItem0=/Game/FirstPerson/Maps/FirstPersonMap
 MRUItem1=/Game/Maps/Level1
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/UI_Menu
+ContentBrowserTab1.SelectedPaths=/Game/3D_Assets/PrettyCouch
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -1375,7 +1375,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Temp_UI
+ContentBrowserDrawer.SelectedPaths=/Game/3D_Assets/PrettyCouch
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -3603,64 +3603,64 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [PlacementMode]
+RecentlyPlaced=/Game/3D_Assets/PrettyCouch/PrettyCouch.PrettyCouch;
+RecentlyPlaced=/Game/3D_Assets/OfficeChair/Base.Base;
+RecentlyPlaced=/Game/3D_Assets/OfficeChair/OfficeChair.OfficeChair;
+RecentlyPlaced=/Game/3D_Assets/AlarmClock/Rods.Rods;
+RecentlyPlaced=/Game/3D_Assets/AlarmClock/AlarmClock_BezierCurve.AlarmClock_BezierCurve;
+RecentlyPlaced=/Game/3D_Assets/Clock/Material_003.Material_003;
+RecentlyPlaced=/Game/3D_Assets/Clock/Base.Base;
+RecentlyPlaced=/Game/3D_Assets/Clock/ClockFaceGlass.ClockFaceGlass;
+RecentlyPlaced=/Game/3D_Assets/AlarmClock/AlarmClock_Cube.AlarmClock_Cube;
+RecentlyPlaced=/Game/3D_Assets/Clock/ClockGlass.ClockGlass;
+RecentlyPlaced=/Game/3D_Assets/AlarmClock/ClockFace.ClockFace;
+RecentlyPlaced=/Game/3D_Assets/AlarmClock/ClockFaceTex.ClockFaceTex;
+RecentlyPlaced=/Game/3D_Assets/AlarmClock/Base.Base;
+RecentlyPlaced=/Game/3D_Assets/AlarmClock/AlarmClock.AlarmClock;
+RecentlyPlaced=/Game/3D_Assets/HallwayBench/HallwayBench.HallwayBench;
+RecentlyPlaced=/Game/3D_Assets/Dumbbell/Dumbbell.Dumbbell;
+RecentlyPlaced=/Game/3D_Assets/RedBed/Cover.Cover;
+RecentlyPlaced=/Game/3D_Assets/RedBed/Frame.Frame;
+RecentlyPlaced=/Game/3D_Assets/RedBed/RedBed.RedBed;
 RecentlyPlaced=/Game/AI/BP_TestGhost.BP_TestGhost;
-RecentlyPlaced=/Game/3D_Models/CharacterModelReference.CharacterModelReference;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Game/3D_Assets/Demon/demon_with_heart_+_bones2_Anim_Root_attack.demon_with_heart_+_bones2_Anim_Root_attack;
-RecentlyPlaced=/Game/3D_Assets/Demon/demon_with_heart_+_bones2_Anim_Root_walk_animation.demon_with_heart_+_bones2_Anim_Root_walk_animation;
-RecentlyPlaced=/Game/3D_Assets/Demon/demon_with_heart_+_bones2_Anim_Root_chase_start_animation.demon_with_heart_+_bones2_Anim_Root_chase_start_animation;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/BluePrints/LightSwitchPhys.LightSwitchPhys;
-RecentlyPlaced=/Game/BluePrints/LightSwitch.LightSwitch;
-RecentlyPlaced=/Game/BluePrints/MirrorSpawnSystem/ControlLight_BP.ControlLight_BP;
-RecentlyPlaced=/Game/Baseboard/Baseboard1.Baseboard1;
-RecentlyPlaced=/Game/Sound/Whispers.Whispers;
-RecentlyPlaced=/Game/Sound/LampBuxxin.LampBuxxin;
-RecentlyPlaced=/Game/Sound/LampLightBuzz.LampLightBuzz;
-RecentlyPlaced=/Game/Sound/Lamp.Lamp;
-RecentlyPlaced=/Game/3D_Assets/BathroomSink/BathroomSink.BathroomSink;
-RecentlyPlaced=/Game/3D_Assets/Candle/candle.candle;
-RecentlyPlaced=/Game/3D_Assets/StorageRack/Plane_001.Plane_001;
-RecentlyPlaced=/Game/3D_Assets/StorageRack/Cylinder_003.Cylinder_003;
 
 [SelectionDetails]
 PreserveScaleRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Temp_UI/Nail_Pickup
-MRUItem1=/Game/Temp_UI/Temp_level_UI
-MRUItem2=/Game/Temp_UI/Temp_UI_Character
-MRUItem3=/Game/BluePrints/InteractSystem/BP_InteractActor
-MRUItem4=/Game/Temp_UI/Temp_nail
-MRUItem5=/Game/UI_Menu/WB_OptionsMenu
-MRUItem6=/Game/UI_Menu/WB_MainMenu
-MRUItem7=/Game/UI_Menu/MenuMusic
-MRUItem8=/Game/UI_Menu/MenuMoving
-MRUItem9=/Game/UI_Menu/MenuMoving_Video_Mat
-MRUItem10=/Game/UI_Menu/MenuMoving_Video
-MRUItem11=/Game/UI_Menu/NewWidgetBlueprint
-MRUItem12=/Game/UI_Assets/MenuVideo
-MRUItem13=/Game/UI_Assets/Background/MainMenu
-MRUItem14=/Game/UI_Assets/Menu
-MRUItem15=/Game/UI_Assets/MenuVideo_Inst
-MRUItem16=/Game/AI/BT_GhostAI
-MRUItem17=/Game/AI/BP_TestGhost
-MRUItem18=/Game/AI/AI_Controller
-MRUItem19=/Game/AI/BBD_GhostAI
-MRUItem20=/Game/AI/Tasks/BTTask_ChasePlayer
-MRUItem21=/Game/BluePrints/MirrorSpawnSystem/Mirror
-MRUItem22=/Game/AI/Tasks/BTTask_RoamAround
-MRUItem23=/Game/BluePrints/AI_Enemy
-MRUItem24=/Game/Materials/LightFlicker
-MRUItem25=/Game/BluePrints/BP_EnemyAI
-MRUItem26=/Game/FirstPerson/Closet/Closet
-MRUItem27=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem28=/Game/FirstPerson/Closet/IA_Interact
-MRUItem29=/Game/BluePrints/BP_Door
+MRUItem0=/Game/3D_Assets/OfficeChair/Base
+MRUItem1=/Game/3D_Assets/AlarmClock/Rods
+MRUItem2=/Game/3D_Assets/Clock/Base
+MRUItem3=/Game/3D_Assets/Dumbbell/Handle
+MRUItem4=/Game/3D_Assets/Dumbbell/DB
+MRUItem5=/Game/3D_Assets/RedBed/Cover
+MRUItem6=/Game/3D_Assets/RedBed/CouchGrey
+MRUItem7=/Game/Temp_UI/Nail_Pickup
+MRUItem8=/Game/Temp_UI/Temp_level_UI
+MRUItem9=/Game/Temp_UI/Temp_UI_Character
+MRUItem10=/Game/BluePrints/InteractSystem/BP_InteractActor
+MRUItem11=/Game/Temp_UI/Temp_nail
+MRUItem12=/Game/UI_Menu/WB_OptionsMenu
+MRUItem13=/Game/UI_Menu/WB_MainMenu
+MRUItem14=/Game/UI_Menu/MenuMusic
+MRUItem15=/Game/UI_Menu/MenuMoving
+MRUItem16=/Game/UI_Menu/MenuMoving_Video_Mat
+MRUItem17=/Game/UI_Menu/MenuMoving_Video
+MRUItem18=/Game/UI_Menu/NewWidgetBlueprint
+MRUItem19=/Game/UI_Assets/MenuVideo
+MRUItem20=/Game/UI_Assets/Background/MainMenu
+MRUItem21=/Game/UI_Assets/Menu
+MRUItem22=/Game/UI_Assets/MenuVideo_Inst
+MRUItem23=/Game/AI/BT_GhostAI
+MRUItem24=/Game/AI/BP_TestGhost
+MRUItem25=/Game/AI/AI_Controller
+MRUItem26=/Game/AI/BBD_GhostAI
+MRUItem27=/Game/AI/Tasks/BTTask_ChasePlayer
+MRUItem28=/Game/BluePrints/MirrorSpawnSystem/Mirror
+MRUItem29=/Game/AI/Tasks/BTTask_RoamAround
 
 [DetailCategoriesAdvanced]
 Actor.Actor=True
@@ -4168,6 +4168,7 @@ Temp_UI_Character_stuff_C="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 Temp_UI_Character_C="\"Object\" "
 Nail_Pickup_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+MaterialExpressionAdd="\"Object\" "
 
 [SuppressableDialogs]
 Warning_NoPreviewMeshFound=False
@@ -4289,6 +4290,12 @@ ChangeVariableType_Warning=False
 /Game/Temp_UI/Temp_UI_Character.Temp_UI_Character=1
 /Game/Temp_UI/Temp_level_UI.Temp_level_UI=1
 /Game/Temp_UI/Nail_Pickup.Nail_Pickup=1
+/Game/3D_Assets/RedBed/Cover.Cover=0
+/Game/3D_Assets/Dumbbell/DB.DB=0
+/Game/3D_Assets/Dumbbell/Handle.Handle=0
+/Game/3D_Assets/Clock/Base.Base=0
+/Game/3D_Assets/AlarmClock/Rods.Rods=0
+/Game/3D_Assets/OfficeChair/Base.Base=0
 
 [MaterialEditor]
 PrimType=1
